{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 337,
  "lineage": "42de2440-2c3f-89b0-f9f0-73ad68887172",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins-test-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a1c80919893ee3e",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0b2041df6b258b955",
            "domain": "vpc",
            "id": "eipalloc-02a1c80919893ee3e",
            "instance": "i-02e1f8de614e79aba",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06419b8d678c56700",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-174-162-163.compute-1.amazonaws.com",
            "public_ip": "54.174.162.163",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.test-jenkins",
            "aws_internet_gateway.jenkins-internet-gateway",
            "aws_network_interface.jenkins-test-nic",
            "aws_security_group.jenkins-allow-web-traffic",
            "aws_subnet.jenkins-subnet",
            "aws_vpc.jenkins-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:684673970544:instance/i-02e1f8de614e79aba",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e1f8de614e79aba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-06419b8d678c56700"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06419b8d678c56700",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d1d288bd68becdda",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bc1a32fb5f88a3f",
            "tags": {
              "Name": "test-jenkins"
            },
            "tags_all": {
              "Name": "test-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02097c6dbc47da014"
            ]
          },
          "dependencies": [
            "aws_network_interface.jenkins-test-nic",
            "aws_security_group.jenkins-allow-web-traffic",
            "aws_subnet.jenkins-subnet",
            "aws_vpc.jenkins-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:internet-gateway/igw-09eee29350eafe1d9",
            "id": "igw-09eee29350eafe1d9",
            "owner_id": "684673970544",
            "tags": {
              "Name": "jenkins-internet-gateway"
            },
            "tags_all": {
              "Name": "jenkins-internet-gateway"
            },
            "vpc_id": "vpc-03aca354e7ae9b13f"
          },
          "dependencies": [
            "aws_vpc.jenkins-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins-test-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:network-interface/eni-06419b8d678c56700",
            "id": "eni-06419b8d678c56700",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:dd:56:4c:d8:15",
            "owner_id": "684673970544",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-02097c6dbc47da014"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bc1a32fb5f88a3f"
          },
          "dependencies": [
            "aws_security_group.jenkins-allow-web-traffic",
            "aws_subnet.jenkins-subnet",
            "aws_vpc.jenkins-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:route-table/rtb-055e68b1a7b92dfbb",
            "id": "rtb-055e68b1a7b92dfbb",
            "owner_id": "684673970544",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09eee29350eafe1d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins=route-table"
            },
            "tags_all": {
              "Name": "jenkins=route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aca354e7ae9b13f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jenkins-internet-gateway",
            "aws_vpc.jenkins-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0629eaf1b1b658d2c",
            "route_table_id": "rtb-055e68b1a7b92dfbb",
            "subnet_id": "subnet-07bc1a32fb5f88a3f"
          },
          "dependencies": [
            "aws_internet_gateway.jenkins-internet-gateway",
            "aws_route_table.jenkins-route-table",
            "aws_subnet.jenkins-subnet",
            "aws_vpc.jenkins-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:security-group/sg-02097c6dbc47da014",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02097c6dbc47da014",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "684673970544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-allow-web-traffic"
            },
            "tags_all": {
              "Name": "jenkins-allow-web-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aca354e7ae9b13f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:subnet/subnet-07bc1a32fb5f88a3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bc1a32fb5f88a3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684673970544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-test-subnet"
            },
            "tags_all": {
              "Name": "jenkins-test-subnet"
            },
            "vpc_id": "vpc-03aca354e7ae9b13f"
          },
          "dependencies": [
            "aws_vpc.jenkins-test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins-test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:vpc/vpc-03aca354e7ae9b13f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-097811163ff19daeb",
            "default_route_table_id": "rtb-01216ad4bcd6ef867",
            "default_security_group_id": "sg-041168d755973eaab",
            "dhcp_options_id": "dopt-0e8b7c901c75c90bb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03aca354e7ae9b13f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01216ad4bcd6ef867",
            "owner_id": "684673970544",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          }
        }
      ]
    }
  ]
}